RESOLVED FIXED44377
TreeWalker traversal order is wrong when skipping and rejecting
https://bugs.webkit.org/show_bug.cgi?id=44377
Summary TreeWalker traversal order is wrong when skipping and rejecting
Simon Fraser (smfr)
Reported 2010-08-20 21:07:27 PDT
When the NodeFilter skips or rejects nodes, the traversal order is all wrong (and doesn't match Firefox).
Attachments
Add some tests (that all pass when bug 35296 is fixed) (10.79 KB, patch)
2010-08-20 21:17 PDT, Simon Fraser (smfr)
no flags
Patch (5.66 KB, patch)
2010-08-21 12:22 PDT, Simon Fraser (smfr)
sam: review+
Patch (5.66 KB, patch)
2010-08-21 13:30 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2010-08-20 21:12:45 PDT
I have some tests that work fine, but when I load http://www-archive.mozilla.org/docs/dom/samples/treewalkerdemo.xml and hit the "All datatypes" button, the result is different from Firefox.
Simon Fraser (smfr)
Comment 2 2010-08-20 21:17:30 PDT
Created attachment 65020 [details] Add some tests (that all pass when bug 35296 is fixed)
Simon Fraser (smfr)
Comment 3 2010-08-20 22:34:20 PDT
I was able to reduce a problem not covered by these tests. Will attach later.
Simon Fraser (smfr)
Comment 4 2010-08-21 12:22:07 PDT
Simon Fraser (smfr)
Comment 5 2010-08-21 13:30:15 PDT
Simon Fraser (smfr)
Comment 6 2010-08-21 13:30:58 PDT
Comment on attachment 65034 [details] Patch Oops, attached the same patch again.
Andreas Kling
Comment 7 2010-08-24 06:23:19 PDT
Comment on attachment 65031 [details] Patch LGTM (not a reviewer though.) Of note: This change will make WebKit pass 2 additional tests on the IE Test Center (previous- and nextSibling() with NodeFilter)
WebKit Review Bot
Comment 8 2010-08-24 11:49:20 PDT
Simon Fraser (smfr)
Comment 9 2010-08-24 13:08:26 PDT
Comment on attachment 65020 [details] Add some tests (that all pass when bug 35296 is fixed) http://trac.webkit.org/changeset/65914
Simon Fraser (smfr)
Comment 10 2010-08-24 13:09:22 PDT
Note You need to log in before you can comment on or make changes to this bug.