2010-08-24  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Sam Weinig.

        TreeWalker traversal order is wrong when skipping and rejecting
        https://bugs.webkit.org/show_bug.cgi?id=44377

        TreeWalker's nextSibling() and previousSibling() behaved incorrectly
        when traversing down a subtree where all nodes are skipped; it backed all
        the way up to the root of the subtree, then jump to the subtree's parentNode.
        This would skip later siblings.

        Fix by resetting 'node' when traversing to children so that node = node->parentNode()
        gets the correct node later.

        Test: fast/dom/TreeWalker/traversal-skip-most.html

        * dom/TreeWalker.cpp:
        (WebCore::TreeWalker::previousSibling):
        (WebCore::TreeWalker::nextSibling):

Canonical link: https://commits.webkit.org/56705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65926 268f45cc-cd09-0410-ab3c-d52691b4dbfc