WebCore/dom/TreeWalker.cpp
@@ -153,6 +153,7 @@ Node* TreeWalker::previousSibling(ScriptState* state)
                 case NodeFilter::FILTER_SKIP:
                     if (sibling->lastChild()) {
                         sibling = sibling->lastChild();
+                        node = sibling;
                         continue;
                     }
                     break;
@@ -189,6 +190,7 @@ Node* TreeWalker::nextSibling(ScriptState* state)
                 case NodeFilter::FILTER_SKIP:
                     if (sibling->firstChild()) {
                         sibling = sibling->firstChild();
+                        node = sibling;
                         continue;
                     }
                     break;
